--- a/app/public/scss/twt.scss
+++ b/app/public/scss/twt.scss
@@ -15,7 +15,9 @@ nav{
   }
 }
 
-
+.text-gray{
+  color:rgb(101, 119, 134);
+}
 .main{
   width:100%;
   max-width:600px;
@@ -42,6 +44,105 @@ nav{
       height:48px;
       border:1px solid #fff;
       box-sizing: border-box;
+    }
+  }
+
+  .twit_box{
+    padding:10px;
+    box-sizing: border-box;
+    border-bottom:1px solid rgb(230, 236, 240);
+    &:hover{
+     background-color: rgb(245, 248, 250);
+    }
+    >a{
+      display: inline-flex;
+      flex: none;
+      margin:0 5px;
+    }
+    .pre_box{
+      display: inline-flex; 
+      color: #14171a;
+      flex: 1;
+
+      .box_info{
+        padding: 0 10px;
+        font-size:15px;
+        width:100%;
+        h4{
+          font-size:15px;
+        }
+        .hashtag{
+          color:rgb(27, 149, 224);
+        }
+        .media_wrap{
+          border-radius: 14px;
+          padding:0;
+          position: relative;
+          overflow: hidden;
+          &.image_2{
+            display:flex;
+            .media_content{
+              img{
+                max-height:100%;
+                max-width: initial; 
+                left: inherit;             
+              }
+            }
+          }
+          &.image_4{
+            display:flex;
+          }
+          .media_content{
+            position: relative; 
+            padding-top: 56.25%; 
+            overflow: hidden;
+            box-sizing: border-box;
+            border: 1px solid #fff;
+        
+            /* 
+              1:1 : padding-top: 100%;
+              2:1 : padding-top: 50%
+              1:2 : padding-top: 200%
+              4:3 : padding-top: 75%
+              16:9 : padding-top: 56.25%
+*/
+            img,
+            video{
+              position: absolute; 
+              top: 0; 
+              left: 0; 
+              right: 0; 
+              bottom: 0; 
+              max-width: 100%; 
+              height: auto;
+
+            }
+            
+          }
+        }
+      }
+    }
+    .twit_box_footer{
+      justify-content: space-between;
+      >span{
+        display:inline-flex;
+        color:rgb(101, 119, 134);
+        transition:color 0.2s;
+        >span{
+          padding:3px;
+          border-radius: 50%;
+        }
+        .retwit{
+            &:hover{
+            color:rgb(23, 191, 99);
+            cursor:pointer;
+          }
+        }
+        .icon{
+          fill:rgb(101, 119, 134);
+          width:1.2rem;
+        }
+      }
     }
   }
   
