--- a/app/server/views/wannaone/index.ejs
+++ b/app/server/views/wannaone/index.ejs
@@ -12,42 +12,105 @@
         헤더
 
       </header>
-      <div class="main">
-        <div class="profile_box">
+      <div class="main position-relative">
+        <div class="main-header position-absolute py-2">
+            <h2 class="font-weight-bold mb-0">Wanna One
+                <svg class="offical-mark" viewBox="0 0 24 24" aria-label="인증된 계정"
+                  class="r-13gxpu9 r-4qtqp9 r-yyyyoo r-1xvli5t r-9cviqr r-dnmrzs r-bnwqim r-1plcrui r-lrvibr">
+                  <g>
+                    <path
+                      d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.17-.032.34-.032.514 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.174-.012-.344-.033-.513 1.158-.687 1.943-1.99 1.943-3.484zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z">
+                    </path>
+                  </g>
+                </svg>
+  
+              </h2>
+              <p class="text-gray">
+                  1,156 트윗
+              </p>
+        </div>
+        <div class="profile_box position-relative">
           <div class="header_bg">
             <img src="/images/twitter_header.jpg">
           </div>
-          <div class="">
-            <img src="/images/profile_img.jpg" class="profile_img">
-            <div class="btn_wrap">
-              <a href="javascript:" class="btn btn-rounded">
-                더보기
+          <div class="d-flex justify-content-between align-items-center">
+            <img src="/images/profile_img.jpg" class="ml-2 profile_img">
+            <div class="btn_wrap mt-5">
+              <a href="javascript:" class="btn  btn-outline-twitter btn-circle">
+                <svg viewBox="0 0 24 24"
+                  class="r-13gxpu9 r-4qtqp9 r-yyyyoo r-1q142lx r-50lct3 r-dnmrzs r-bnwqim r-1plcrui r-lrvibr">
+                  <g>
+                    <path
+                      d="M19.39 14.882c-1.58 0-2.862-1.283-2.862-2.86s1.283-2.862 2.86-2.862 2.862 1.283 2.862 2.86-1.284 2.862-2.86 2.862zm0-4.223c-.75 0-1.362.61-1.362 1.36s.61 1.36 1.36 1.36 1.362-.61 1.362-1.36-.61-1.36-1.36-1.36zM12 14.882c-1.578 0-2.86-1.283-2.86-2.86S10.42 9.158 12 9.158s2.86 1.282 2.86 2.86S13.578 14.88 12 14.88zm0-4.223c-.75 0-1.36.61-1.36 1.36s.61 1.362 1.36 1.362 1.36-.61 1.36-1.36-.61-1.363-1.36-1.363zm-7.39 4.223c-1.577 0-2.86-1.283-2.86-2.86S3.034 9.16 4.61 9.16s2.862 1.283 2.862 2.86-1.283 2.862-2.86 2.862zm0-4.223c-.75 0-1.36.61-1.36 1.36s.61 1.36 1.36 1.36 1.362-.61 1.362-1.36-.61-1.36-1.36-1.36z">
+                    </path>
+                  </g>
+                </svg>
               </a>
-              <a href="javascript:" class="btn btn-rounded">
-                알림
+              <a href="javascript:" class="btn mx-1 btn-outline-twitter btn-circle">
+                <svg viewBox="0 0 24 24"
+                  class="r-13gxpu9 r-4qtqp9 r-yyyyoo r-1q142lx r-50lct3 r-dnmrzs r-bnwqim r-1plcrui r-lrvibr">
+                  <g>
+                    <path
+                      d="M23.24 3.26h-2.425V.832c0-.414-.336-.75-.75-.75s-.75.336-.75.75V3.26H16.89c-.414 0-.75.335-.75.75s.336.75.75.75h2.426v2.424c0 .414.336.75.75.75s.75-.336.75-.75V4.76h2.425c.415 0 .75-.337.75-.75s-.336-.75-.75-.75zm-6.23 7.606c.02-2.434-.782-4.597-2.258-6.09-1.324-1.342-3.116-2.084-5.046-2.093h-.013c-1.93.01-3.722.75-5.046 2.092C3.172 6.27 2.37 8.433 2.39 10.867 2.426 15 .467 16.56.39 16.62c-.26.193-.367.53-.266.838.102.308.39.515.712.515h4.716c.11 2.226 1.94 4.007 4.194 4.007s4.083-1.78 4.194-4.007h4.625c.32 0 .604-.206.707-.51s0-.643-.255-.838c-.082-.064-2.043-1.625-2.008-5.76zM9.745 20.48c-1.426 0-2.586-1.11-2.694-2.508h5.388c-.108 1.4-1.268 2.507-2.694 2.507zm-7.29-4.007c.702-1.095 1.457-2.904 1.434-5.618-.017-2.062.614-3.8 1.825-5.025C6.757 4.774 8.172 4.19 9.7 4.184c1.527.007 2.943.59 3.985 1.646 1.21 1.226 1.84 2.963 1.823 5.025-.022 2.714.732 4.523 1.437 5.618H2.455z">
+                    </path>
+                  </g>
+                </svg>
               </a>
-              <a href="javascript:" class="btn btn-rounded">
+              <a href="javascript:" class="btn btn-twitter btn-rounded mr-3">
                 팔로잉
               </a>
             </div>
           </div>
-          <div class="profile_info">
-            <h2>Wanna One <img src="" class="offical_mark"></h2>
-            <h3 class="twt_id">@WannaOne_twt</h3>
-            <p class="description">
+          <div class="profile_info pl-3">
+            <h2 class="font-weight-bold mb-0">Wanna One
+              <svg class="offical-mark" viewBox="0 0 24 24" aria-label="인증된 계정"
+                class="r-13gxpu9 r-4qtqp9 r-yyyyoo r-1xvli5t r-9cviqr r-dnmrzs r-bnwqim r-1plcrui r-lrvibr">
+                <g>
+                  <path
+                    d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.17-.032.34-.032.514 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.174-.012-.344-.033-.513 1.158-.687 1.943-1.99 1.943-3.484zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z">
+                  </path>
+                </g>
+              </svg>
+
+            </h2>
+            <h3 class="twt_id text-gray mb-0">@WannaOne_twt</h3>
+            <p class="description my-2">
               Wanna One (워너원) 공식 트위터 계정 입니다.</p>
             <p>
               <span class="link-img">
 
               </span>
               <a href="http://cafe.daum.net/WannaOneOfficial" target="_blank">
-                http://cafe.daum.net/WannaOneOfficial
+                <svg class="icon" viewBox="0 0 24 24"
+                  class="r-1re7ezh r-4qtqp9 r-yyyyoo r-1xvli5t r-7o8qx1 r-dnmrzs r-bnwqim r-1plcrui r-lrvibr">
+                  <g>
+                    <path
+                      d="M11.96 14.945c-.067 0-.136-.01-.203-.027-1.13-.318-2.097-.986-2.795-1.932-.832-1.125-1.176-2.508-.968-3.893s.942-2.605 2.068-3.438l3.53-2.608c2.322-1.716 5.61-1.224 7.33 1.1.83 1.127 1.175 2.51.967 3.895s-.943 2.605-2.07 3.438l-1.48 1.094c-.333.246-.804.175-1.05-.158-.246-.334-.176-.804.158-1.05l1.48-1.095c.803-.592 1.327-1.463 1.476-2.45.148-.988-.098-1.975-.69-2.778-1.225-1.656-3.572-2.01-5.23-.784l-3.53 2.608c-.802.593-1.326 1.464-1.475 2.45-.15.99.097 1.975.69 2.778.498.675 1.187 1.15 1.992 1.377.4.114.633.528.52.928-.092.33-.394.547-.722.547z">
+                    </path>
+                    <path
+                      d="M7.27 22.054c-1.61 0-3.197-.735-4.225-2.125-.832-1.127-1.176-2.51-.968-3.894s.943-2.605 2.07-3.438l1.478-1.094c.334-.245.805-.175 1.05.158s.177.804-.157 1.05l-1.48 1.095c-.803.593-1.326 1.464-1.475 2.45-.148.99.097 1.975.69 2.778 1.225 1.657 3.57 2.01 5.23.785l3.528-2.608c1.658-1.225 2.01-3.57.785-5.23-.498-.674-1.187-1.15-1.992-1.376-.4-.113-.633-.527-.52-.927.112-.4.528-.63.926-.522 1.13.318 2.096.986 2.794 1.932 1.717 2.324 1.224 5.612-1.1 7.33l-3.53 2.608c-.933.693-2.023 1.026-3.105 1.026z">
+                    </path>
+                  </g>
+                </svg> http://cafe.daum.net/WannaOneOfficial
               </a>
-              <span class="calander-img">
-
-              </span>
+            
               <span class="text-gray">
-                가입일: 2017년 6월
+                <svg class="icon ml-2" viewBox="0 0 24 24"
+                  class="r-1re7ezh r-4qtqp9 r-yyyyoo r-1xvli5t r-7o8qx1 r-dnmrzs r-bnwqim r-1plcrui r-lrvibr">
+                  <g>
+                    <path
+                      d="M19.708 2H4.292C3.028 2 2 3.028 2 4.292v15.416C2 20.972 3.028 22 4.292 22h15.416C20.972 22 22 20.972 22 19.708V4.292C22 3.028 20.972 2 19.708 2zm.792 17.708c0 .437-.355.792-.792.792H4.292c-.437 0-.792-.355-.792-.792V6.418c0-.437.354-.79.79-.792h15.42c.436 0 .79.355.79.79V19.71z">
+                    </path>
+                    <circle cx="7.032" cy="8.75" r="1.285"></circle>
+                    <circle cx="7.032" cy="13.156" r="1.285"></circle>
+                    <circle cx="16.968" cy="8.75" r="1.285"></circle>
+                    <circle cx="16.968" cy="13.156" r="1.285"></circle>
+                    <circle cx="12" cy="8.75" r="1.285"></circle>
+                    <circle cx="12" cy="13.156" r="1.285"></circle>
+                    <circle cx="7.032" cy="17.486" r="1.285"></circle>
+                    <circle cx="12" cy="17.486" r="1.285"></circle>
+                  </g>
+                </svg>가입일: 2017년 6월
               </span>
             </p>
             <p>
@@ -55,14 +118,14 @@
                 0
               </span>
               <span> 팔로잉</span>
-              <span class="font-weight-bold">
-                300.4만
+              <span class="font-weight-bold ml-3">
+                300.3만
               </span>
               <span class="">팔로워</span>
             </p>
           </div>
         </div>
-        <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <ul class="nav nav-tabs" id="twitterTab" role="tablist">
           <li class="nav-item">
             <a class="nav-link active" id="twit-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
               aria-selected="true">
@@ -98,7 +161,14 @@
                 <div class="box_info">
                   <h4 class="mb-0">
                     <span class="font-weight-bold">
-                      Wanna One
+                      Wanna One <svg class="offical-mark" viewBox="0 0 24 24" aria-label="인증된 계정"
+                      class="r-13gxpu9 r-4qtqp9 r-yyyyoo r-1xvli5t r-9cviqr r-dnmrzs r-bnwqim r-1plcrui r-lrvibr">
+                      <g>
+                        <path
+                          d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.17-.032.34-.032.514 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.174-.012-.344-.033-.513 1.158-.687 1.943-1.99 1.943-3.484zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z">
+                        </path>
+                      </g>
+                    </svg>
                     </span>
                     <span class="text-gray">
                       @WannaOne_twt
@@ -147,7 +217,7 @@
                       <img src="/images/1548598530.jpg" />
                     </div>
                   </div>
-                  <div class="twit_box_footer  d-flex">
+                  <div class="twit_box_footer  align-items-center d-flex">
                     <span>
                       <span class="mention">
                         <svg viewBox="0 0 24 24" class="icon">
@@ -260,7 +330,7 @@
                       </video>
                     </div>
                   </div>
-                  <div class="twit_box_footer  d-flex">
+                  <div class="twit_box_footer align-items-center d-flex">
                     <span>
                       <span class="mention">
                         <svg viewBox="0 0 24 24" class="icon">
@@ -354,7 +424,7 @@
                       <img src="/images/1548597600-2.jpg" />
                     </div>
                   </div>
-                  <div class="twit_box_footer  d-flex">
+                  <div class="twit_box_footer align-items-center d-flex">
                     <span>
                       <span class="mention">
                         <svg viewBox="0 0 24 24" class="icon">
@@ -450,7 +520,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="twit_box_footer  d-flex">
+                  <div class="twit_box_footer align-items-center d-flex">
                     <span>
                       <span class="mention">
                         <svg viewBox="0 0 24 24" class="icon">
