--- a/app/public/css/twt.css
+++ b/app/public/css/twt.css
@@ -3,6 +3,7 @@ html, body {
   margin: 0;
   width: 100%;
   height: 100%;
+  line-height: 1.3125;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu, "Helvetica Neue", sans-serif; }
 
 nav {
@@ -11,13 +12,65 @@ nav {
   nav svg {
     width: 48px; }
 
+.btn-circle {
+  border-radius: 50%;
+  padding: 0.5rem 0.7rem; }
+
+.btn-rounded {
+  border-radius: 1.25rem; }
+
+.offical-mark {
+  height: 1.25em;
+  fill: #1da1f2; }
+
+.btn-twitter {
+  border: 1px solid #1da1f2;
+  color: #fff;
+  background: #1da1f2; }
+  .btn-twitter svg {
+    fill: #fff;
+    width: 1.2rem; }
+  .btn-twitter:hover, .btn-twitter:focus {
+    color: #fff;
+    background: #1a91da; }
+
+.icon {
+  margin-right: 5px;
+  fill: #657786;
+  width: 1.2rem; }
+
+.btn-outline-twitter {
+  border: 1px solid #1da1f2;
+  color: #1da1f2;
+  background: #fff; }
+  .btn-outline-twitter svg {
+    fill: #1da1f2;
+    width: 1.2rem; }
+  .btn-outline-twitter:hover, .btn-outline-twitter:focus {
+    background: rgba(29, 161, 242, 0.2); }
+
 .text-gray {
-  color: #657786; }
+  color: #657786;
+  fill: #657786; }
 
 .main {
+  padding-top: 60px;
   width: 100%;
   max-width: 600px;
   margin: 0 auto; }
+  .main .main-header {
+    background: #fff;
+    height: 60px;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    top: 0;
+    left: 0;
+    z-index: 99; }
+    .main .main-header h2 {
+      font-size: 19px; }
+    .main .main-header p {
+      font-size: 13px; }
   .main img {
     max-width: 100%; }
   .main .profile_img {
@@ -27,6 +80,43 @@ nav {
     height: 131px;
     border: 4px solid #fff;
     box-sizing: border-box; }
+  .main .profile_box .justify-content-between.align-items-center {
+    position: absolute;
+    width: 100%;
+    top: 140px; }
+  .main .profile_box .btn_wrap .btn-circle {
+    padding: 0.4rem 0.5rem; }
+    .main .profile_box .btn_wrap .btn-circle svg {
+      width: 1.4rem; }
+  .main .profile_box .profile_info {
+    margin-top: 70px; }
+    .main .profile_box .profile_info h2 {
+      font-size: 19px; }
+    .main .profile_box .profile_info .twt_id {
+      font-size: 15px; }
+    .main .profile_box .profile_info p {
+      font-size: 15px; }
+  .main #twitterTab .nav-item {
+    width: 25%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 15px; }
+    .main #twitterTab .nav-item:hover {
+      background: rgba(29, 161, 242, 0.2); }
+    .main #twitterTab .nav-item .nav-link {
+      color: #657786;
+      padding: 1rem;
+      border: none;
+      box-sizing: border-box; }
+      .main #twitterTab .nav-item .nav-link:hover {
+        border: #fff;
+        color: #1da1f2; }
+      .main #twitterTab .nav-item .nav-link.active {
+        color: #1da1f2;
+        border-top: none;
+        border-left: none;
+        border-right: none;
+        border-bottom: 2px solid #1da1f2; }
   .main .tab-content .profile_img {
     width: 48px;
     height: 48px;
@@ -96,14 +186,10 @@ nav {
         color: #657786;
         transition: color 0.2s; }
         .main .twit_box .twit_box_footer > span > span {
-          padding: 3px;
           border-radius: 50%; }
         .main .twit_box .twit_box_footer > span .retwit:hover {
           color: #17bf63;
           cursor: pointer; }
-        .main .twit_box .twit_box_footer > span .icon {
-          fill: #657786;
-          width: 1.2rem; }
 
 /*sass --watch public/scss/style.scss:public/css/share_style.css*/
 
