--- a/client/src/components/views/NavBar/Sections/Navbar.css
+++ b/client/src/components/views/NavBar/Sections/Navbar.css
@@ -50,7 +50,7 @@
   padding: 6px;
   margin-top: 8px;
   display: none !important; /* use of important to overwrite ant-btn */
-  background: #3e91f7;
+  background: #1890ff;
 }
 
 .menu_drawer .ant-drawer-body {
