--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -37,6 +37,11 @@ input.error {
   height: 5px;
   margin-top: -12px;
 }
+.container{
+  width:100%;
+  margin: 0 auto;
+  max-width:1080px;
+}
 
 
 .text-center{text-align:center}
