--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -41,7 +41,7 @@ input.error {
   width:100%;
   margin: 0 auto;
   max-width:1080px;
-  padding: 0 5%;
+  padding: 20px 5%;
   box-sizing: border-box;
 }
 
@@ -61,9 +61,52 @@ input.error {
 
 .align-items-center{align-items: center;}
 .justify-content-center{justify-content: center;}
+.justify-content-end{justify-content: flex-end;}
 
 footer{
   height:80px; display:flex; flex-direction: column; align-items: center; justify-content: center; font-size:1rem; text-align:center;
+}
+.CategoryTab{
+  margin-right:10px;
+  font-size:12px;
+
+  cursor:pointer;
+  &:hover{
+    color:#961210;
+  }
+}
+.ListWrap{
+  margin-top:15px;
+  margin-bottom:30px;
+  .item{
+    position:relative;
+    width:100%;
+    .thumbnail{
+      width:100%;
+      min-height:200px;
+      display:block;
+      height:auto;
+      border:1px solid #444444
+    }
+    p{font-size:12px;}
+    p.date{
+      opacity:0.8
+    }
+    .category{
+      position:absolute;
+      top:0;
+      left:0;
+      padding:3px 5px;
+      color:#fff;
+      font-size:10px;
+      &.personal{
+        background:#961210;
+      }
+      &.company{
+        background:#000080;
+      }
+    }
+  }
 }
 
 @media (max-width: 767px) {
