--- a/client/src/components/views/NavBar/Sections/Navbar.scss
+++ b/client/src/components/views/NavBar/Sections/Navbar.scss
@@ -11,39 +11,38 @@
 .menu__logo {
   width: 150px;
   float: left;
+  a {
+    display: inline-block;
+    font-size: 20px;
+    padding: 19px 20px;
+  }
 }
 
-.menu__logo a {
-  display: inline-block;
-  font-size: 20px;
-  padding: 19px 20px;
+
+.menu__container {
+  .ant-menu-item {
+    padding: 0px 5px;
+  }
+  .ant-menu-submenu-title {
+    padding: 10px 20px;
+  }
+  .ant-menu-item a,
+  .ant-menu-submenu-title a {
+    padding: 10px 20px;
+    display: block;
+  }
+  .ant-menu-horizontal {
+    border-bottom: none;
+  }
+  .menu_left {
+    float: left;
+  }
+  .menu_right {
+    float: right;
+  }
+
 }
 
-.menu__container .ant-menu-item {
-  padding: 0px 5px;
-}
-
-.menu__container .ant-menu-submenu-title {
-  padding: 10px 20px;
-}
-
-.menu__container .ant-menu-item a,
-.menu__container .ant-menu-submenu-title a {
-  padding: 10px 20px;
-  display: block;
-}
-
-.menu__container .ant-menu-horizontal {
-  border-bottom: none;
-}
-
-.menu__container .menu_left {
-  float: left;
-}
-
-.menu__container .menu_right {
-  float: right;
-}
 
 .menu__mobile-button {
   float: right;
