--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
-    "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -12,11 +12,10 @@ code {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: 'Noto Sans KR', sans-serif;
   font-size: 14px;
   line-height: 1.5;
-  color: #24292e;
+  color: #434343;
   background-color: #fff;
 }
 
@@ -184,10 +183,10 @@ footer{
   }
 }
 .category{
-  
   padding:3px 5px;
   color:#fff;
   font-size:10px;
+  margin-right:5px;
   &.personal{
     background:#961210;
   }
@@ -208,26 +207,24 @@ footer{
       height:auto;
       border:1px solid #444444
     }
-    p{font-size:12px;}
+    h3{margin-top:5px;}
+    p{font-size:12px; color: #434343;}
     p.date{
       opacity:0.8
     }
     .category{
-        position:absolute;
-        top:0;
-        left:0;
+      position:absolute;
+      top:0;
+      left:0;
     }
     
   }
 }
 
 @media (max-width: 767px) {
-  .container{padding: 0 3%;}
-
-
+.container{padding: 0 3%;}
 .uploadProject{
-  .input_wrap{ 
-   
+  .input_wrap{   
     .thumbnail_wrap{
       flex-direction: row;
       img{
