--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -65,6 +65,32 @@ input.error {
         width:100%; max-width:500px;
       }
     }
+    .DraftEditor-root{
+      min-height:100px;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-variant: tabular-nums;
+      list-style: none;
+      -webkit-font-feature-settings: 'tnum';
+      font-feature-settings: 'tnum', "tnum";
+      position: relative;
+      display: inline-block;
+      width: 100%;
+      min-width: 0;
+      padding: 4px 11px;
+      color: rgba(0, 0, 0, 0.65);
+      font-size: 14px;
+      line-height: 1.5715;
+      background-color: #fff;
+      background-image: none;
+      border: 1px solid #d9d9d9;
+      border-radius: 2px;
+      -webkit-transition: all 0.3s;
+      transition: all 0.3s;
+
+    }
   }
 }
 
@@ -204,8 +230,9 @@ footer{
       width:100%;
       min-height:200px;
       display:block;
+      margin:0 auto;
       height:auto;
-      border:1px solid #444444
+      border:1px solid #444444;
     }
     h3{margin-top:5px;}
     p{font-size:12px; color: #434343;}
@@ -221,6 +248,13 @@ footer{
   }
 }
 
+.DetailPageWrap{
+  img {
+    margin: 0 auto;
+    width:100%;
+    max-width:300px;
+  }
+}
 @media (max-width: 767px) {
 .container{padding: 0 3%;}
 .uploadProject{
